gcc/testsuite/rust/rustc/ui/macros/macro-missing-fragment.rs
macro_rules! m {
    ( $( any_token $field_rust_type )* ) => {}; // { dg-error "" "" { target *-*-* } }
}

fn main() {
    m!();
}

